@@ -15,25 +15,25 @@
             data-name="KRW score fyto"
             data-adapter-class="adapter_krw"
             data-adapter-layer-json='{"layer": "score-fyto"}'>
-          <span class="file">fyto</span>
+          fyto
         </li>
         <li class="workspace-acceptable file"
             data-name="KRW score flora"
             data-adapter-class="adapter_krw"
             data-adapter-layer-json='{"layer": "score-flora"}'>
-          <span class="file">flora</span>
+          flora
         </li>
         <li class="workspace-acceptable file"
             data-name="KRW score fauna"
             data-adapter-class="adapter_krw"
             data-adapter-layer-json='{"layer": "score-fauna"}'>
-          <span class="file">fauna</span>
+          fauna
         </li>
         <li class="workspace-acceptable file"
             data-name="KRW score vis"
             data-adapter-class="adapter_krw"
             data-adapter-layer-json='{"layer": "score-vis"}'>
-          <span class="file">vis</span>
+          vis
         </li>
       </ul>
     </li>
@@ -41,7 +41,7 @@
         data-name="KRW maatregelen"
         data-adapter-class="adapter_krw"
         data-adapter-layer-json='{"layer": "measure"}'>
-      <span class="file">maatregelen</span>
+      maatregelen
     </li>
   </ul>
 </div>
