@@ -5,6 +5,10 @@ Changelog of lizard-krw
 0.9 (unreleased)
 ----------------
 
+- Added template parameter to krw_browser.
+
+- Slightly changed layout of krw_browser.
+
 - Changed required field water_type in water_body to optional with
   migration (no backwards migration).
 
